--- a/trabalho-2/trabalho_2.ipynb
+++ b/trabalho-2/trabalho_2.ipynb
@@ -107,6 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# source: https://www.kaggle.com/grfiv4/plot-a-confusion-matrix\n",
+    "\n",
     "from utils import confusion_matrix\n",
     "\n",
     "\n",
@@ -158,6 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# source: https://scikit-learn.org/stable/auto_examples/linear_model/plot_iris_logistic.html\n",
+    "\n",
     "def plot_boundaries(X, y, clf):\n",
     "    (x_min, x_max) = (X[:, 0].min() - .5, X[:, 0].max() + .5)\n",
     "    (y_min, y_max) = (X[:, 1].min() - .5, X[:, 1].max() + .5)\n",
